@@ -17,6 +17,7 @@ import uk.gov.justice.services.common.converter.JsonObjectToObjectConverter;
 import uk.gov.justice.services.common.converter.jackson.ObjectMapperProducer;
 import uk.gov.moj.cpp.domains.results.shareresults.PublicHearingResulted;
 import uk.gov.moj.cpp.results.it.helper.NcesNotificationRequestDocumentRequestHelper;
+import uk.gov.moj.cpp.results.it.stub.DocumentGeneratorStub;
 import uk.gov.moj.cpp.results.query.view.response.HearingResultSummariesView;
 import uk.gov.moj.cpp.results.query.view.response.HearingResultSummaryView;
 import uk.gov.moj.cpp.results.test.TestTemplates;
@@ -32,7 +33,6 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.jayway.jsonpath.matchers.JsonPathMatchers.withJsonPath;
 import static java.nio.charset.Charset.defaultCharset;
@@ -62,6 +62,9 @@ import static uk.gov.justice.services.test.utils.core.random.RandomGenerator.STR
 import static uk.gov.moj.cpp.domains.results.shareresults.PublicHearingResulted.publicHearingResulted;
 import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.*;
 import static uk.gov.moj.cpp.results.it.steps.data.factory.HearingResultDataFactory.getUserId;
+import static uk.gov.moj.cpp.results.it.stub.DcsStub.clearDcsStub;
+import static uk.gov.moj.cpp.results.it.stub.DcsStub.setupDCSStub;
+import static uk.gov.moj.cpp.results.it.stub.DcsStub.verifyDCSRequestIsRaised;
 import static uk.gov.moj.cpp.results.it.stub.NotificationNotifyServiceStub.verifyEmailNotificationIsRaised;
 import static uk.gov.moj.cpp.results.it.stub.ProgressionStub.stubGetProgressionCaseExistsByUrn;
 import static uk.gov.moj.cpp.results.it.stub.ProgressionStub.stubGetProgressionProsecutionCases;
@@ -77,6 +80,9 @@ import static uk.gov.moj.cpp.results.test.matchers.BeanMatcher.isBean;
 public class HearingResultedIT {
 
     private static final String TEMPLATE_PAYLOAD_CROWN = "json/public.events.hearing.hearing-resulted-crown.json";
+    private static final String TEMPLATE_PAYLOAD_CROWN_FIRST_RESULTED = "json/public.events.hearing.hearing-resulted-crown-first-resulted.json";
+    private static final String TEMPLATE_PAYLOAD_CROWN_SECOND_RESULTED = "json/public.events.hearing.hearing-resulted-crown-second-resulted.json";
+    private static final String TEMPLATE_PAYLOAD_CROWN_THIRD_RESULTED = "json/public.events.hearing.hearing-resulted-crown-third-resulted.json";
     private static final String TEMPLATE_PAYLOAD_RESHARE_CROWN = "json/public.events.hearing.hearing-results-reshared-crown.json";
     private static final String TEMPLATE_PAYLOAD_GROUP_CASES = "json/public.events.hearing.hearing-resulted-group-cases.json";
     private static final String SESSION_ID = "sessionId";
@@ -113,14 +119,15 @@ public class HearingResultedIT {
         stubPoliceFlag(OU_CODE, PROSECUTION_AUTHORITY);
         stubNotificationNotifyEndPoint();
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-        stubDocGeneratorEndPoint();
+        DocumentGeneratorStub.stubDocGeneratorEndPoint();
         stubMaterialUploadFile();
 
     }
 
     @AfterEach
-    public void teardown() throws JMSException {
+    public void teardown() {
         closeMessageConsumers();
+        clearDcsStub();
     }
 
     @BeforeEach
@@ -172,7 +179,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void whenVerdictPresentThenPoliceResultGeneratedHasFindingWithVerdictCode() throws JMSException {
+    public void whenVerdictPresentThenPoliceResultGeneratedHasFindingWithVerdictCode() {
         final PublicHearingResulted resultsMessage = basicShareResultsV2WithVerdictTemplate(MAGISTRATES, true, false);
         setOuCodeAndProsecutorAuthority(resultsMessage);
 
@@ -224,8 +231,19 @@ public class HearingResultedIT {
 
     @Test
     public void shouldSendEmailForFirstShareAndAmendmentsForCrownCourt() {
+        setupDCSStub();
         final UUID hearingId = randomUUID();
-        final JsonObject payload = getPayload(TEMPLATE_PAYLOAD_CROWN, hearingId);
+        final UUID caseId = randomUUID();
+        final UUID defendantId = randomUUID();
+        final UUID offenceId1 = randomUUID();
+        final UUID offenceId2 = randomUUID();
+        final String payloadString = getPayloadAsString(TEMPLATE_PAYLOAD_CROWN)
+                .replaceAll("HEARING_ID", hearingId.toString())
+                .replaceAll("CASE_ID", caseId.toString())
+                .replaceAll("DEFENDANT_ID", defendantId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString());
+        final JsonObject payload = jsonStringToJsonObject(payloadString);
         stubSpiOutFlag(true, true, policeEmailAddress);
         hearingResultsHaveBeenSharedV2(payload);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
@@ -234,8 +252,16 @@ public class HearingResultedIT {
 
         getSummariesByDate(startDate);
         verifyEmailNotificationIsRaised(List.of(policeEmailAddress), List.of("Imprisonment"));
+        verifyDCSRequestIsRaised(Arrays.asList(caseId.toString(), defendantId.toString(),offenceId1.toString()), 1);
 
-        final JsonObject amendedPayload = getPayload(TEMPLATE_PAYLOAD_RESHARE_CROWN, hearingId);
+
+        final String amendedPayloadString = getPayloadAsString(TEMPLATE_PAYLOAD_RESHARE_CROWN)
+                .replaceAll("HEARING_ID", hearingId.toString())
+                .replaceAll("CASE_ID", caseId.toString())
+                .replaceAll("DEFENDANT_ID", defendantId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString());
+        final JsonObject amendedPayload = jsonStringToJsonObject(amendedPayloadString);
         hearingResultsHaveBeenSharedV2(amendedPayload);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
 
@@ -249,6 +275,74 @@ public class HearingResultedIT {
                 randomUUID(), randomUUID(), randomUUID(), "POLICE_NOTIFICATION_HEARING_RESULTS", additionalInformation);
 
         verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "Imprisonment"));
+        verifyDCSRequestIsRaised(Arrays.asList(caseId.toString(), defendantId.toString(),offenceId2.toString()), 1);
+        clearDcsStub();
+    }
+
+    @Test
+    public void shouldSendEmailForMultipleShareAndAmendmentsForCrownCourt() {
+        setupDCSStub();
+        final UUID hearingId = randomUUID();
+        final UUID caseId = randomUUID();
+        final UUID defendantId1 = randomUUID();
+        final UUID defendantId2 = randomUUID();
+        final UUID offenceId1 = randomUUID();
+        final UUID offenceId2 = randomUUID();
+        final String payloadString = getPayloadAsString(TEMPLATE_PAYLOAD_CROWN_FIRST_RESULTED)
+                .replaceAll("HEARING_ID", hearingId.toString())
+                .replaceAll("CASE_ID", caseId.toString())
+                .replaceAll("DEFENDANT_ID_1", defendantId1.toString())
+                .replaceAll("DEFENDANT_ID_2", defendantId2.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString());
+        final JsonObject payload = jsonStringToJsonObject(payloadString);
+        stubSpiOutFlag(true, true, policeEmailAddress);
+        hearingResultsHaveBeenSharedV2(payload);
+        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
+        final LocalDate startDate = of(2019, 5, 25);
+
+        getSummariesByDate(startDate);
+
+        final String amendedPayloadString = getPayloadAsString(TEMPLATE_PAYLOAD_CROWN_SECOND_RESULTED)
+                .replaceAll("HEARING_ID", hearingId.toString())
+                .replaceAll("CASE_ID", caseId.toString())
+                .replaceAll("DEFENDANT_ID_1", defendantId1.toString())
+                .replaceAll("DEFENDANT_ID_2", defendantId2.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString());
+        final JsonObject amendedPayload = jsonStringToJsonObject(amendedPayloadString);
+        hearingResultsHaveBeenSharedV2(amendedPayload);
+        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
+
+        getSummariesByDate(startDate);
+        final HashMap additionalInformation = new HashMap();
+        additionalInformation.put(policeEmailAddress, "Sent for trial under");
+        additionalInformation.put("notificationId", randomUUID().toString());
+        additionalInformation.put("emailTemplateId", randomUUID().toString());
+
+        ncesNotificationRequestDocumentRequestHelper.sendSystemDocGeneratorPublicEvent(getUserId(),
+                randomUUID(), randomUUID(), randomUUID(), "POLICE_NOTIFICATION_HEARING_RESULTS", additionalInformation);
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "Sent for trial under"));
+
+        final String amendedSecondPayloadString = getPayloadAsString(TEMPLATE_PAYLOAD_CROWN_THIRD_RESULTED)
+                .replaceAll("HEARING_ID", hearingId.toString())
+                .replaceAll("CASE_ID", caseId.toString())
+                .replaceAll("DEFENDANT_ID_1", defendantId1.toString())
+                .replaceAll("DEFENDANT_ID_2", defendantId2.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString());
+        final JsonObject amendedSecondPayload = jsonStringToJsonObject(amendedSecondPayloadString);
+        hearingResultsHaveBeenSharedV2(amendedSecondPayload);
+        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
+
+       getSummariesByDate(startDate);
+
+       ncesNotificationRequestDocumentRequestHelper.sendSystemDocGeneratorPublicEvent(getUserId(),
+                randomUUID(), randomUUID(), randomUUID(), "POLICE_NOTIFICATION_HEARING_RESULTS", additionalInformation);
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "Sent for trial under"));
+        verifyDCSRequestIsRaised(Arrays.asList(caseId.toString(), defendantId1.toString(),offenceId1.toString()), 1);
+        verifyDCSRequestIsRaised(Arrays.asList(caseId.toString(), defendantId2.toString(),offenceId1.toString()), 2);
+        clearDcsStub();
     }
 
     @Test
@@ -291,8 +385,7 @@ public class HearingResultedIT {
 
         final Function<HearingResultSummariesView, List<HearingResultSummaryView>> resultsFilter =
                 summs -> summs.getResults().stream().filter(sum -> sum.getHearingId().equals(hearingIn.getId()))
-                        .collect(Collectors.toList());
-
+                        .toList();
 
         final long defendantCount = hearingIn.getProsecutionCases().stream().mapToLong(c -> c.getDefendants().size()).sum();
 
@@ -360,7 +453,7 @@ public class HearingResultedIT {
 
         final Function<HearingResultSummariesView, List<HearingResultSummaryView>> resultsFilter =
                 summs -> summs.getResults().stream().filter(sum -> sum.getHearingId().equals(hearingIn.getId()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         final BeanMatcher<HearingResultSummariesView> summaryCheck = isBean(HearingResultSummariesView.class)
                 .withValue(summs -> resultsFilter.apply(summs).size(),
@@ -530,7 +623,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void shouldBeSentToSpiOutForApplicationWithNoJudicialResultsV2() throws JMSException {
+    public void shouldBeSentToSpiOutForApplicationWithNoJudicialResultsV2() {
 
         final PublicHearingResulted resultsMessage = publicHearingResulted()
                 .setHearing(basicShareHearingTemplateWithApplication(randomUUID(), MAGISTRATES))
@@ -573,7 +666,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void shouldBeSentToSpiOutForApplicationWithJudicialResultsV2() throws JMSException {
+    public void shouldBeSentToSpiOutForApplicationWithJudicialResultsV2() {
 
         final PublicHearingResulted resultsMessage = publicHearingResulted()
                 .setHearing(basicShareHearingTemplateWithCustomApplication(randomUUID(), MAGISTRATES,
@@ -639,7 +732,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void shouldSentSpiOutForApplicationWithCourtOrderOnlyV2() throws JMSException {
+    public void shouldSentSpiOutForApplicationWithCourtOrderOnlyV2() {
         final UUID caseId = randomUUID();
         final String caseUrn = "32DN1212262";
         final JsonObject payload = getPayload("json/public.events.hearing.hearing-resulted-court-order.json", randomUUID(), caseId, null);
@@ -667,7 +760,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void testCCForEmailNotificationSuccess_WhenApplicationIsResultedOnly() throws JMSException {
+    public void testCCForEmailNotificationSuccess_WhenApplicationIsResultedOnly() {
         final UUID hearingId = randomUUID();
         final UUID caseId = randomUUID();
         final String caseUrn = "31DI1504926";
@@ -690,7 +783,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void testCCForEmailNotificationSuccess_WhenApplicationIsResultedAndResharedOnly() throws JMSException {
+    public void testCCForEmailNotificationSuccess_WhenApplicationIsResultedAndResharedOnly() {
         final UUID hearingId = randomUUID();
         final UUID caseId = fromString("cfb28f37-5159-4297-ab6a-653a63627d0b");
         final String caseUrn = "31DI1504926";
@@ -726,7 +819,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void shouldSentSpiOutForResultApplicationOnlyForMags() throws JMSException {
+    public void shouldSentSpiOutForResultApplicationOnlyForMags() {
         final UUID hearingId = randomUUID();
         final UUID caseId = randomUUID();
         final String caseUrn = "31DI1504926";
@@ -807,6 +900,19 @@ public class HearingResultedIT {
         return getPayload(path, hearingId, null);
     }
 
+    private String getPayloadAsString(final String path) {
+        String request = null;
+        try {
+            final InputStream inputStream = HearingResultedIT.class.getClassLoader().getResourceAsStream(path);
+            assertThat(inputStream, IsNull.notNullValue());
+            request = IOUtils.toString(inputStream, defaultCharset());
+        } catch (final Exception e) {
+            fail("Error consuming file from location " + path);
+        }
+
+        return request;
+    }
+
     private JsonObject getPayload(final String path, final UUID hearingId, final UUID groupId) {
         String request = null;
         try {
@@ -837,6 +943,11 @@ public class HearingResultedIT {
             fail("Error consuming file from location " + path);
         }
         final JsonReader reader = createReader(new StringReader(request));
+        return reader.readObject();
+    }
+
+    private JsonObject jsonStringToJsonObject(final String input) {
+        final JsonReader reader = createReader(new StringReader(input));
         return reader.readObject();
     }
 }
